--- a/social_book/account/templates/accounts/login.html
+++ b/social_book/account/templates/accounts/login.html
@@ -179,7 +179,7 @@
       <h2><i class="fas fa-sign-in-alt"></i> Login </h2>
       <form method="POST">
         {% csrf_token %}
-        <input type="text" name="email" placeholder="Username" required>
+        <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit"><i class="fas fa-arrow-right"></i> Login</button>
       </form>
