--- a/social_book/account/templates/accounts/verify_otp.html
+++ b/social_book/account/templates/accounts/verify_otp.html
@@ -67,6 +67,7 @@
 <body>
     <form method="post">
         {% csrf_token %}
+        <p>OTP is sent to <b>{{ email }}</b></p>
         <label for="otp">Enter OTP:</label>
         <input type="text" id="otp" name="otp" placeholder="Enter OTP" required maxlength="4" pattern="\d{4}"><br>
         <button type="submit">Verify OTP</button>
